--- a/web/index.html
+++ b/web/index.html
@@ -37,17 +37,19 @@
     const serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
+  <!-- note: local setting -->
   <script src="flutter.js" defer></script>
+  <!-- note: web setting -->
+  <!--  <script src='./main.dart.js' type='application/javascript'></script>-->
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>
+  <!-- note: local and web setting: pub Web integration -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.min.js"></script>
   <script type="text/javascript">
-    pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.min.js";
-    pdfRenderOptions = {
-      cMapUrl: 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/cmaps/',
-      cMapPacked: true,
-    }
+     pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.worker.min.js";
   </script>
+
+  <!-- note: local setting -->
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -56,7 +58,7 @@
           serviceWorkerVersion: serviceWorkerVersion,
         },
         onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
+          engineInitializer.initializeEngine({ renderer: "html"}).then(function(appRunner) {
             appRunner.runApp();
           });
         }
